# StudyBuddy

./: .gitignore  .sourcery.yaml  FEATURE_BACKLOG.md  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
ai/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
ai/app/: main.py
ai/app/core/: config.py  deps.py  logging.py
ai/app/routers/: chem.py  flashcards.py  quiz.py  rag.py
ai/app/schemas/: flashcards.py
ai/tests/: test_health.py
deploy/: nginx-site.conf  setup_server.sh  update.sh
deploy/systemd/: studybuddy-ai.service  studybuddy-web.service
docs/: architecture.md
docs/decisions/: 0001-two-service-polyglot-repo.md
infra/: docker-compose.yml
infra/supabase/migrations/: 0001_initial_setup.sql
web/: .dockerignore  .env.local.example  .prettierignore  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  prisma.config.ts  proxy.ts  vitest.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sw.ts
web/app/(app)/: layout.tsx
web/app/(auth)/: layout.tsx
web/components/banners/: config-banner.tsx
web/components/chat/: course-chat.tsx
web/components/courses/: course-card.tsx  course-form.tsx  course-shell.tsx  delete-course-dialog.tsx  new-course-button.tsx  note-list.tsx  topic-tree.tsx
web/components/dashboard/: activity-heatmap.tsx
web/lib/: db.ts  env.ts  utils.ts
web/prisma/: schema.prisma  seed.ts
web/public/: manifest.json
web/scripts/: seed-bio-restructure.ts  seed-chem-deep-notes.ts  seed-course-details.ts  seed-courses-content.ts
(+74 files in other folders)
